--- a/mifosng-android/src/main/res/layout/activity_new_pass_code.xml
+++ b/mifosng-android/src/main/res/layout/activity_new_pass_code.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:paddingBottom="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -346,6 +347,7 @@
             android:text="@string/passcode_setup"
             android:textColor="@color/white"
             android:onClick="savePassCode"
+            android:background="@drawable/login_button_rounded"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_keypad_zero" />
@@ -360,7 +362,8 @@
             android:onClick="startBiometricActivity"
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
-            android:padding="5dp"
+            android:padding="10dp"
+            android:background="@drawable/fingerprint_button_rounded"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_set_passcode">
@@ -378,7 +381,7 @@
                 android:layout_marginLeft="10dp"
                 android:textSize="18sp"
                 android:text="@string/biometric"
-                android:textColor="@color/black" />
+                android:textColor="@color/red_app" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
