--- a/mifosng-android/src/main/res/layout/activity_survey_question.xml
+++ b/mifosng-android/src/main/res/layout/activity_survey_question.xml
@@ -6,26 +6,32 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/LinearLayout.Base">
+    style="@style/LinearLayout.Base"
+    android:padding="20dp">
 
 
-    <include layout="@layout/toolbar"
-        />
+    <include layout="@layout/toolbar" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/surveyPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <LinearLayout android:orientation="horizontal"
-        android:gravity="center" android:measureWithLargestChild="true"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:layout_weight="0">
-
-        <Button android:id="@+id/btnNext"
-            android:layout_width="200dp" android:layout_height="wrap_content"
-            android:text="@string/next">
-        </Button>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:gravity="center"
+        android:measureWithLargestChild="true"
+        android:orientation="horizontal">
+        
+        <Button
+            android:id="@+id/btnNext"
+            style="@style/Button.Base"
+            android:textAllCaps="false"
+            android:background="@drawable/login_button_rounded"
+            android:text="@string/submit" />
     </LinearLayout>
 
     <TextView
@@ -33,8 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:visibility="gone"
         android:text="@string/surveyEmpty"
-        />
+        android:visibility="gone" />
 </LinearLayout>
 
