--- a/mifosng-android/src/main/res/layout/fragment_client_identifiers.xml
+++ b/mifosng-android/src/main/res/layout/fragment_client_identifiers.xml
@@ -21,7 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_centerHorizontal="true"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:padding="20dp"/>
 
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
