--- a/mifosng-android/src/main/res/layout/fragment_datatables.xml
+++ b/mifosng-android/src/main/res/layout/fragment_datatables.xml
@@ -10,7 +10,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
