--- a/mifosng-android/src/main/res/layout/fragment_survey_last.xml
+++ b/mifosng-android/src/main/res/layout/fragment_survey_last.xml
@@ -5,38 +5,50 @@
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/survey_submit_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/card_blueborder"
-        android:text="@string/thanks_on_survey"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textStyle="italic"
-        android:layout_marginTop="192dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/btn_submit"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/submit_survey"
-        android:gravity="center"
-        android:layout_marginTop="81dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_below="@+id/survey_submit_textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="false"
+        app:contentPadding="10dp"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center">
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/survey_submit_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/thanks_on_survey"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textStyle="italic"
+                android:layout_marginBottom="15dp"/>
+
+            <Button
+                android:id="@+id/btn_submit"
+                style="@style/Button.Base"
+                android:textAllCaps="false"
+                android:background="@drawable/login_button_rounded"
+                android:text="@string/submit" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
