--- a/mifosng-android/src/main/res/layout/fragment_survey_list.xml
+++ b/mifosng-android/src/main/res/layout/fragment_survey_list.xml
@@ -33,6 +33,7 @@
             android:paddingLeft="20dip"
             android:paddingRight="10dip"
             android:paddingTop="20dip"
+            android:paddingBottom="20dip"
             android:text="@string/select_one_survey"
             android:textSize="18sp" />
 
