--- a/mifosng-android/src/main/res/layout/fragment_survey_question.xml
+++ b/mifosng-android/src/main/res/layout/fragment_survey_question.xml
@@ -8,7 +8,8 @@
     android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal">
+    android:layout_gravity="center_horizontal"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,29 +20,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/primary"
-            android:orientation="horizontal"
-            android:padding="20dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/survey_question_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="10dp"
                 android:text="@string/question"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="25sp" />
 
+            <RadioGroup
+                android:id="@+id/radio_btn_answer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dip"
+                android:layout_marginTop="5dip"
+                android:background="@color/primary"/>
         </LinearLayout>
-
-        <RadioGroup
-            android:id="@+id/radio_btn_answer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dip"
-            android:layout_marginTop="5dip"
-            android:background="#fff"/>
 
         <View
             android:layout_width="wrap_content"
