--- a/mifosng-android/src/main/res/menu/menu_add.xml
+++ b/mifosng-android/src/main/res/menu/menu_add.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/menu_add"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_add_white_24dp"
+        android:icon="@drawable/ic_add_black"
         android:enabled="true"
         tools:ignore="MenuTitle"/>
 
